--- a/acestream.conf
+++ b/acestream.conf
@@ -1,10 +1,11 @@
 --client-console
---login
-re.place@meakdsj
---password
-ReplaceMe7h3dh
+--bind-all
+--service-remote-access
 --access-token
 acestream
+--service-access-token 
+root
+--stats-report-peers 
 --live-cache-type
 memory
 --live-cache-size
@@ -18,40 +19,40 @@ memory
 --max-file-size
 2147483648
 --live-buffer
-50
+25
 --vod-buffer
-30
+10
 --max-connections
 500
 --max-peers
-30
+50
 --max-upload-slots
-30
+50
 --auto-slots
 0
 --download-limit
 0
 --upload-limit
-500
+1024
 --stats-report-interval
-1
+2
 --stats-report-peers
 --slots-manager-use-cpu-limit
 1
 --core-skip-have-before-playback-pos
 1
 --core-dlr-periodic-check-interval
-3
+5
 --check-live-pos-interval
-3
+5
 --refill-buffer-interval
-2
+1
 --webrtc-allow-outgoing-connections
 1
 --allow-user-config
 --log-debug
 0
---log-max-size                                                                            
+--log-max-size
 15000000
 --log-backup-count
 1
