--- a/acestream.conf
+++ b/acestream.conf
@@ -13,7 +13,7 @@ memory
 --vod-cache-type
 memory
 --cache-dir
-/storage/.ACEStream
+/acestream.engine/.ACEStream
 --vod-drop-max-age
 120
 --max-file-size
