--- a/supervisor.start.conf
+++ b/supervisor.start.conf
@@ -2,8 +2,30 @@
 nodaemon=true
 user=root
 
+[program:cron]
+command=/bin/bash -c "cron -f -L 15"
+stdout_logfile=/dev/fd/2
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+autostart=true
+autorestart=true
+user=root
+stopsignal=KILL
+numprocs=1
+
+[program:crontabjobs]
+command=/bin/bash -c "sleep 2s && /opt/ace_search/crontabjobs"
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+autostart=true
+autorestart=false
+user=root
+stopsignal=KILL
+numprocs=1
+
 [program:acestream]
-command=/system/bin/acestream.sh
+command=/bin/bash -c "sleep 8s && /system/bin/acestream.sh"
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
@@ -14,18 +36,7 @@ stopsignal=KILL
 numprocs=1
 
 [program:HTTPAceProxy]
-command=/bin/bash -c "sleep 10s && python3 /opt/HTTPAceProxy/acehttp.py"
-stdout_logfile=/dev/fd/2
-stdout_logfile_maxbytes=0
-redirect_stderr=true
-autostart=true
-autorestart=true
-user=root
-stopsignal=KILL
-numprocs=1
-
-[program:cron]
-command=/bin/bash -c "sleep 40s && cron -f"
+command=/bin/bash -c "sleep 20s && python3 /opt/HTTPAceProxy/acehttp.py"
 stdout_logfile=/dev/fd/2
 stdout_logfile_maxbytes=0
 redirect_stderr=true
